--- a/table.html
+++ b/table.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>table</title>
-<link href="css/style.css" type="text/css" rel="stylesheet" />
+<link href="table/css/style.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
 <table id="table" width="800px" border="0" align="center" cellpadding="0" cellspacing="0" >
@@ -12,13 +12,13 @@
 		<div id="leftBG"></div>
 			<table border="0" align="center" cellpadding="0" cellspacing="0" >
 				<tr>
-					<td><img src="images/top-bg.png" alt="top-bg" width="654px" height="151px" /><div id="slogan"><p>Slogan goes here</p><h1>Company Name</h1></div></td>
-					<td><img src="images/comp.gif" alt="comp"/></td>
+					<td><img src="table/images/top-bg.png" alt="top-bg" width="654px" height="151px" /><div id="slogan"><p>Slogan goes here</p><h1>Company Name</h1></div></td>
+					<td><img src="table/images/comp.gif" alt="comp"/></td>
 				</tr>
 			</table>
 			<table align="left" width="667px" border="0" cellpadding="0" cellspacing="0" >
 				<tr>
-					<td><img src="images/ugl-top.png" alt="ugl-to" style="margin-left:68px" /></td>
+					<td><img src="table/images/ugl-top.png" alt="ugl-to" style="margin-left:68px" /></td>
 					<td id="bg_for_x"></td> <!-- таблица для фона по - x -->
 				</tr>
 			</table>
@@ -28,7 +28,7 @@
 					<td  id="lineBG">
 						<table  border="0"  cellpadding="0" cellspacing="0" >	<!-- таблица для фона по - y -->
 							<tr>
-								<td><img src="images/lineBG.gif" alt="lineBG" /></td>
+								<td><img src="table/images/lineBG.gif" alt="lineBG" /></td>
 							</tr>
 						</table>		
 					</td>
@@ -77,10 +77,10 @@
 									<h3>Welcome to</h3>
 									<h4 id="sed1">Sed scelerisque convallis mauris. </h4>
 									<p><span>Ut vitae purus.</span> Integer a wisi a mi blandit cursus. Aliquam erat volutpat. Donec aliquet quam sit amet urna. Donec vitae mauris.  Donec aliquett egestas arcu eget augue. Duis id velit in turpis convallis aliquam.</p>
-									<img src="images/hrBG.png" alt="hrBG" height="1px" width="377px" />
+									<img src="table/images/hrBG.png" alt="hrBG" height="1px" width="377px" />
 									<h4 id="sed2">Sed scelerisque convallis mauris. </h4>
 									<p id="ut2"><span>Ut vitae purus.</span> Integer a wisi a mi blandit cursus. Aliquam erat volutpat. Donec aliquet quam sit amet urna. Donec vitae mauris.  Donec aliquett egestas arcu eget augue. Duis id velit in turpis convallis aliquam.</p>
-									<img src="images/hrBG.png" alt="hrBG" height="1px" width="377px" />
+									<img src="table/images/hrBG.png" alt="hrBG" height="1px" width="377px" />
 									<h4 id="Integer">Integer a wisi a mi blandit cursus</h4>
 									<div id="servera">
 										<div id="ser1">
@@ -145,7 +145,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td colspan="5" width="154px" height="17px"><img src="images/ugl-bottom.gif"  alt="ugl-bottom" width="154px" height="17px" /></td>
+					<td colspan="5" width="154px" height="17px"><img src="table/images/ugl-bottom.gif"  alt="ugl-bottom" width="154px" height="17px" /></td>
 				</tr>
 			</table>
 		</td>
