--- a/index.html
+++ b/index.html
@@ -7,16 +7,9 @@
 </head>
 <body>
     <div
-        style="
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            height: 100px;
-            width: 200px;
-            margin: auto;"
-        >
-        <a href="/div/index.html" target="_blank">Layout by Div</a>
-        <a href="/table/index.html" target="_blank">Layout by Table</a>
+        style="display: flex; align-items: center; justify-content: space-between; height: 100px; width: 200px; margin: auto;">
+        <a href="div.html" target="_blank">Layout by Div</a>
+        <a href="table.html" target="_blank">Layout by Table</a>
     </div>
 </body>
 </html>
