--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <div
         style="display: flex; align-items: center; justify-content: space-between; height: 100px; width: 200px; margin: auto;">
-        <a href="div.html" target="_blank">Layout by Div</a>  |  <a href="table.html" target="_blank">Layout by Table</a>
+        <a href="div.html" target="_blank" style="display: inline-block; margin: 5px">Layout by Div</a>
+        <a href="table.html" target="_blank" style="display: inline-block; margin: 5px">Layout by Table</a>
     </div>
 </body>
 </html>
